fix margin overflow under postImage

--- a/src/components/posts/PostCard.css
+++ b/src/components/posts/PostCard.css
@@ -20,6 +20,7 @@
   overflow: hidden;
 }
 .post-img img {
+  margin-bottom: -5px;
   width: 100%;
 }
 
